--- a/assets/sass/page-custom.scss
+++ b/assets/sass/page-custom.scss
@@ -1,3 +1,23 @@
 .page-template-page-custom {
-  
+  #page {
+    width: 100%;
+    max-width: 100%;
+  }
+  .billboard {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+    iframe,
+    object,
+    embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
