--- a/assets/sass/page-custom.scss
+++ b/assets/sass/page-custom.scss
@@ -3,6 +3,9 @@
     width: 100%;
     max-width: 100%;
   }
+  .site-content {
+      padding: 0;
+  }
   .billboard {
     position: relative;
     padding-bottom: 56.25%;
