--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: Zenshin
 Theme URI: https://www.aikido-reading.co.uk
-Author: Matt Rdaford & Suzie Hibberd
+Author: Matt Radford & Suzie Hibberd
 Author URI: https://mattrad.uk
 Template: generatepress
 Description:  GeneratePress child theme for Reading Zenshin aikido club.
