--- a/assets/sass/page-custom.scss
+++ b/assets/sass/page-custom.scss
@@ -12,7 +12,10 @@
     height: 0;
     overflow: hidden;
     max-width: 100%;
-    height: auto;
+    height: calc(~'100vh - 60px');
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     iframe,
     object,
     embed {
@@ -21,6 +24,10 @@
       left: 0;
       width: 100%;
       height: 100%;
+    }
+    img {
+      position: relative;
+      align-self: flex-end;
     }
   }
 }
