--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,41 +1,234 @@
-
-body, .inside-article, .comments-area, .page-header, .one-container .container, .paging-navigation, .inside-page-header, .sidebar .widget {
+body,
+.inside-article,
+.comments-area,
+.page-header,
+.one-container .container,
+.paging-navigation,
+.inside-page-header,
+.sidebar .widget {
 	background-color: white !important;
 }
 
+.home .billboard {
+	.elementor-background-video-container {
+		display: block !important;
+	}
+}
+
+.section--button {
+	.elementor-button-wrapper {
+		text-align: center;
+	}
+	.elementor-row {
+		.button__spacer {
+			>div {
+				margin-top: -1.4em;
+				p {
+					margin-bottom: 0;
+				}
+			}
+		}
+	}
+}
+
+.elementor-testimonial-wrapper {
+	.elementor-testimonial-meta-inner {
+		display: flex !important;
+		flex-direction: column;
+	}
+	.elementor-testimonial-meta.elementor-testimonial-image-position-aside .elementor-testimonial-details {
+		text-align: center !important;
+		padding-top: 20px;
+	}
+}
+
+.elementor-widget-button .elementor-button.elementor-button-info {
+	background-color: #4acec1 !important;
+	transition: all 0.2s ease;
+	&:hover,
+	&:focus {
+		background-color: #2faca0 !important;
+	}
+}
 
 .footer-widgets {
 	background-color: #50656e;
-    padding: 40px 0px;
+	padding: 40px 0px;
 	color: white;
 }
 
-.footer-widgets a, .footer-widgets a:visited{
+.footer-widgets a,
+.footer-widgets a:visited {
 	color: white !important;
 }
 
 .footer-widgets .widget-title {
-	font-family: "Droid Serif", Sans-serif;
-	font-weight: 600;
-	border-bottom: 1px solid #3a3a3a;
+	// font-family: "Droid Serif", Sans-serif;
+	// font-weight: 600;
+	border-bottom: 1px solid white;
 	color: white;
 	display: inline-block;
+}
+
+.site-info {
+	padding: 0 0 20px 0!important;
+	.logos {
+		padding: 20px 0;
+		background-color: darken(#50656e, 10%);
+		p {
+			font-size: 17px;
+		}
+	}
+	.member-of {
+		&.bab {
+			img {
+				padding: 5px;
+				background-color: white;
+			}
+		}
+		&.tiae {
+			padding: 20px 0;
+			a h5 {
+				color: white;
+				display: inline-block;
+				border-bottom: 1px solid transparent;
+				font-size: 20px;
+				font-family: Georgia, serif;
+				margin-bottom: 0;
+				&:hover,
+				&:focus {
+					border-bottom-color: white;
+				}
+			}
+		}
+	}
+	.copyright {
+		padding-top: 20px;
+	}
 }
 
 footer p:last-child {
 	margin-bottom: 0;
 }
 
+.gform_wrapper {
+	.gform_footer {
+		text-align: center;
+		.gform_button {
+			background-color: #f0ad4e;
+			font-family: Roboto, Sans-serif;
+			font-weight: 500;
+			font-size: 20px !important;
+			padding: 25px 50px;
+			border-radius: 6px;
+			color: white;
+			&:hover,
+			&:focus {
+				opacity: .9;
+			}
+		}
+	}
+}
+.gform_wrapper.gf_browser_chrome .gfield_checkbox li input, .gform_wrapper.gf_browser_chrome .gfield_checkbox li input[type=checkbox], .gform_wrapper.gf_browser_chrome .gfield_radio li input[type=radio] {
+	margin-top: 0 !important;
+}
+
+
 /* ------- Responsive code here ------- */
 
-@media only screen and (min-width:768px){
-	.home .billboard {
-		min-height: 600px;
+@media only screen and (min-width:480px) {
+	.site-info {
+		.logos {
+			padding: 20px 10px;
+			>div {
+				display: flex;
+				justify-content: space-around;
+				align-content: center;
+				flex-direction: row;
+			}
+		}
+		.member-of {
+			display: flex;
+			justify-content: center;
+			&.tiae {
+				padding: 0;
+			}
+			a {
+				margin: auto 0;
+			}
+		}
 	}
 }
 
-@media only screen and (min-width:768px){
-	.inside-footer-widgets.grid-container {
+@media only screen and (min-width:768px) {
+	.section--button {
+		.elementor-row {
+			justify-content: center;
+			>div {
+				width: auto;
+			}
+			.button__spacer {
+				>div {
+					margin-top: 0;
+					p {
+						margin-bottom: 1.4em;
+					}
+				}
+			}
+		}
+	}
+	.elementor-testimonial-wrapper {
+		.elementor-testimonial-meta-inner {
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			>div {
+				width: auto;
+			}
+		}
+		.elementor-testimonial-meta.elementor-testimonial-image-position-aside .elementor-testimonial-details {
+			text-align: left !important;
+			padding-top: 0;
+			padding-left: 20px;
+		}
+	}
+}
 
+@media only screen and (min-width:768px) {
+	#primary-menu {
+		.home-link {
+			width: 60px;
+			a {
+				text-indent: -9999px;
+				background: url('assets/img/logo-target.png') no-repeat center center transparent;
+				background-size: 60px;
+			}
+		}
+	}
+	.home {
+		#primary-menu {
+			.home-link {
+				a {
+					background: none;
+					background-size: 60px;
+					transition: all 0.2s ease;
+				}
+				&.current-menu-item {
+					a {
+						background-color: transparent;
+					}
+				}
+			}
+		}
+		.navigation-stick {
+			#primary-menu {
+				.home-link {
+					a {
+						background: url('assets/img/logo-target.png') no-repeat center center transparent;
+						background-size: 60px;
+					}
+				}
+			}
+		}
 	}
 }
